force-app/main/default/objects/Contract_Quick_Parts__mdt/Contract_Quick_Parts__mdt.object-meta.xml
<CustomObject>
    <description>These are options for feeding the contract document with language that lines up with specific contract terems.</description>
    <label>Contract Quick Parts</label>
    <pluralLabel>Contract Quick Parts</pluralLabel>
</CustomObject>