force-app/main/default/objects/Contract_Quick_Parts__mdt/fields/Activity_Special_Condition_Clause__c.field-meta.xml
<CustomField>
    <fullName>Activity_Special_Condition_Clause__c</fullName>
    <label>Activity Special Condition Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>