force-app/main/default/objects/Contract_Quick_Parts__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National Objective</fullName>
                <default>true</default>
                <label>National Objective</label>
            </value>
            <value>
                <fullName>Program Eligibility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>