force-app/main/default/objects/Contract_Quick_Parts__mdt/fields/Clause__c.field-meta.xml
<CustomField>
    <fullName>Clause__c</fullName>
    <label>Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>