force-app/main/default/objects/Contract_Quick_Parts__mdt/fields/Program_Eligibility_Clause__c.field-meta.xml
<CustomField>
    <fullName>Program_Eligibility_Clause__c</fullName>
    <label>Program Eligibility Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>